# strands-sdk-agent-iso

./: .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  requirements-excel.txt
.cursor/rules/: coding-precursor-alignment.mdc  core-scope.mdc  discovery-first.mdc  git-explicit-push.mdc  iso9001-product.mdc  llm-bedrock-only.mdc  new-specialists-and-agents.mdc  python-strands.mdc  repo-maintenance.mdc  security-first.mdc
.kiro/settings/: mcp.json  mcp.json.example
docs/: ARCHITECTURE.md  AUDIT_FLOW.md  CAPABILITIES.md  CAPABILITIES.template.md  DOC_MAINTENANCE.md  ENV_AND_SECRETS_INVENTORY.md  INITIAL_SETUP.md  INTEGRATIONS_WALKTHROUGH.md  MANUAL_AGENT_QA_CHECKLIST.md  NEUUF_ISO_PHASE_PLAN.md  NOTION_MCP.md
docs/templates/: gap_handoff_chat.md  gap_handoff_notion.md
knowledge/: README.md
knowledge/agents/: coding_precursor.md  comms_coordinator.md  dev_builder.md  gap_analyst.md  google_chat_room_suffix.md  governance_evidence.md  neuuf_coordinator.md  primary.md  researcher.md
memory/: README.md
references/: HOOKS_from_strands_sdk.md  MCP_CLIENT_ARCHITECTURE_from_strands_sdk.md  STRANDS_AWS_INTRO_BLOG.md  STRANDS_OFFICIAL_DOCS.md  STRANDS_SAMPLES.md  STRANDS_SDK.md
scripts/: dev_shell.sh  run_integration_smoke.py  sync_repo_docs.py
secrets/: README.md
skills/: README.md
src/iso_agent/: __init__.py  config.py  paths.py
src/iso_agent/adapters/: __init__.py  google_chat_app.py
src/iso_agent/l1_router/: __init__.py  context.py  google_chat.py  handler.py
src/iso_agent/l2_user/: __init__.py  audit_schedule.py  calendar_store.py  gap_store.py  memory_layout.py  notion_allowlist_store.py  notion_page_index_store.py  user_scope.py
src/iso_agent/l3_runtime/: __init__.py  agents.py  default_model.py  prompts.py  specialists.py
src/iso_agent/l3_runtime/cli/: __init__.py  rich_agent_callback.py
src/iso_agent/l3_runtime/integrations/: __init__.py  drive_client.py  google_workspace_mcp.py  notion_client.py  notion_mcp.py  notion_mcp_oauth.py  notion_mcp_runtime.py  perplexity.py
src/iso_agent/l3_runtime/team/: __init__.py  comms_tool.py  coordinator.py  gap_analyst_tool.py  governance_tool.py  researcher_tool.py  specialist_base.py  subagents.py
src/iso_agent/l3_runtime/tools/: __init__.py  audit_tools.py  calendar_tools.py  coding_tools.py  drive_tools.py  gap_tools.py  notion_tools.py
src/iso_agent/mcp/: __init__.py  stdio_server.py
src/iso_agent/scripts/: __init__.py  demo_calculator.py  iso_chat_webhook.py  neuuf_coordinator_cli.py  notion_mcp_login.py
tests/: __init__.py  manual_notion_page_inspect.py  notion_mcp_fakes.py  test_coding_restraints.py  test_coordinator_coding_precursor.py  test_coordinator_coding_tools.py  test_default_model.py  test_drive_tools.py  test_gap_store.py  test_gap_tools.py  test_google_chat_app.py  test_google_chat_parse.py  test_google_workspace_mcp.py  test_memory_layout.py  test_neuuf_coordinator_cli.py  test_notion_allowlist_store.py  test_notion_fetch_page_text.py  test_notion_mcp.py  test_notion_page_index_store.py  test_notion_tools.py  test_perplexity.py  test_phase7_calendar_audit.py  test_prompts_and_mode.py  test_pyproject_optional_extras.py  test_rich_agent_callback.py  test_sync_repo_docs.py
